tests/NormalTests/paczka1/small_fuzzy/80697066.err
Error in line 3: aKwf A0 66,3
Error in line 4: aKwf A0 56,1
Error in line 5: aKwf A0 124,5
Error in line 7: aKwf A0 4,9
Error in line 8: 0H2 A0 24,9
Error in line 10: 0H2 A0 122,0
Error in line 12: aKwf A0 6,7
Error in line 13: 0H2 A0 37,0
Error in line 14: 0H2 A0 5,6
Error in line 15: A0 A0 63,2
Error in line 16: BQKGUySDF A0 63,4
